# taskmgt_api

./: .env  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: c07a7acfd815_create_tasks_table.py  eacb1f961dde_add_created_at_to_tasks.py
app/: main.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: task.py
app/routers/: tasks.py
app/schemas/: task.py
app/services/: task_service.py
docs/: learning-notes.md
